ops/apps/backend/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: home-control
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      imagePullSecrets:
        - name: docker-secrets
      containers:
        - name: server
          image: rsiegfanz/home-control-server:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: log-volume
              mountPath: /var/log
      volumes:
        - name: log-volume
          persistentVolumeClaim:
            claimName: server-pv-claim
