ops/apps/backend/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: home-control
spec:
  selector:
    app: server
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
